Refactor: collect 대신 toList로 수정